# pulumi-azure

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tools-requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
configs/: README.md
configs/sample/: servicebus-config.pkl
configs/schema/: servicebus-schema.pkl
func-apps/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  configs.py  local_dataclasses.py
modules/: compute.py  messaging.py  modulepath_fixer.py  storage.py  vm.py
scripts/bash/: az-204-setup.sh
scripts/powershell/: az-204-setup.ps1
storage-works/: Pulumi.dev.yaml  Pulumi.yaml  README.md  __main__.py  configs.py  stack.json
uber-demo/: Pulumi.dev.yaml  __main__.py  configs.py  pulumi_configs.py  requirements-mac-linux.txt  requirements-windows.txt
uber-demo/local_configs/: app-func-sbs.pkl
uber-demo/pkl/servicebus/: app-func-sbs.pkl
utils/: module_dataclasses.py  utils.py
vm/: Pulumi.yaml  __main__.py  config.py  pulumi.dev.yaml  requirements.txt
